[gd_scene load_steps=9 format=3 uid="uid://mf43d54o4b2i"]

[ext_resource type="Script" uid="uid://dh3dnladqyd3e" path="res://Characters/Player/player.gd" id="1_kne1u"]
[ext_resource type="Texture2D" uid="uid://cl6cvabdvdwyq" path="res://Sprites/player.png" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://c1d3pe22rv8nj" path="res://Sprites/player_trail.png" id="2_kne1u"]
[ext_resource type="Texture2D" uid="uid://bs0c55nllom8k" path="res://Sprites/point_light.png" id="4_e80uo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kpjcp"]
radius = 50.055103

[sub_resource type="SpriteFrames" id="SpriteFrames_e80uo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kpjcp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_cxr5p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kne1u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e80uo"]
size = Vector2(1386.5, 1010.5)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_kne1u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(1.0390625, 1)
shape = SubResource("CircleShape2D_kpjcp")

[node name="body" type="AnimatedSprite2D" parent="."]
position = Vector2(-61, 5)
sprite_frames = SubResource("SpriteFrames_e80uo")

[node name="tail_container" type="Node2D" parent="."]
position = Vector2(-2, 0)

[node name="tail" type="AnimatedSprite2D" parent="tail_container"]
position = Vector2(-146, 11)
scale = Vector2(1.1406251, 1)
sprite_frames = SubResource("SpriteFrames_cxr5p")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-0.5000038, 0.5000038)
scale = Vector2(2, 2)
texture = ExtResource("4_e80uo")

[node name="Control_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control_zone"]
shape = SubResource("RectangleShape2D_e80uo")

[connection signal="body_entered" from="Control_zone" to="." method="_on_control_zone_body_entered"]
[connection signal="body_exited" from="Control_zone" to="." method="_on_control_zone_body_exited"]
